# rust-machine-learning

./: .gitignore  Cargo.toml  README.md  bacon.toml
.github/workflows/: rust.yml
cli/: Cargo.toml
cli/src/: main.rs
examples/: Cargo.toml  medium_numbers.rs
examples/src/: digits.rs  iris.rs  medium_numbers.rs
rustml/: Cargo.toml
rustml/src/: lib.rs  network.rs
rustml/src/functions/: activation.rs  cost.rs  input_normalizations.rs  weight_init.rs
rustml/src/learning/supervised/network/: mod.rs  multi_layer_perceptron.rs
rustml/src/network/: mod.rs  multi_layer_perceptron.rs
rustml/src/supervised/network/: mod.rs
rustml/src/supervised/network/multi_layer_perceptron/: classification.rs  mod.rs
rustml/src/utils/: csv.rs  math.rs  misc.rs  mod.rs
rustml/src/utils/csv_testing/: file1.csv
