[package]
name = "rustml_examples"
version = "0.1.0"
edition = "2021"
authors = ["Jáchym Kohout <jachym.kohout@gmail.com>"]

[dependencies]
rustml = { path = "../rustml" }
csv = "1.1.6"

[[example]]
name = "digits"
path = "src/digits.rs"

[[example]]
name = "medium_numbers"
path = "src/medium_numbers.rs"
