[package]
name = "rustml"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/Yachim/rustml"
authors = ["Jáchym Kohout <jachym.kohout@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
csv = "1.1.6"
rand = "0.8.5"
rand_distr = "0.4.3"
